--- a/src/main/features/dashboard/views/macro/claimStatus/partAdmitRejectionClaimant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/partAdmitRejectionClaimant.njk
@@ -1,6 +1,5 @@
 {% from "externalLink.njk" import externalLink %}
 {% from "internalLink.njk" import internalLink %}
-{% from "./utilityMacros.njk" import downloadResponseLink %}
 
 {% macro partAdmitRejectedByClaimantDashboard() %}
   {{ t('You’ve rejected the defendant’s admission.') }}
@@ -8,19 +7,18 @@
 
 {% macro partAdmitRejectedByClaimantClaimDetails(claim) %}
   <div class="status-block">
-    <h2 class="heading-small">{{ t('You’ve rejected the defendant’s admission.') }}</h2>
+    <h2 class="heading-small">{{ t('We’ll contact you with a mediation appointment') }}</h2>
+
+    <p>{{ t('You rejected the defendant’s admission of {{ amount }}', { amount: claim.response.amount | numeral }) }}</p>
 
     {% if claim.claimantResponse.freeMediation === FreeMediationOption.YES %}
-      <p>{{ t('You’ve both agreed to try mediation. The Small Claims Mediation Service will contact you to arrange an appointment.') }}</p>
-      {{ externalLink('Find out how mediation works', 'https://www.gov.uk/government/publications/small-claims-mediation-service-ex730') }}
+      <p>{{ t('You’ve both agreed to try mediation. We’ll contact you to arrange an appointment.') }}</p>
+      <p>{{ internalLink('Find out how mediation works', DashboardPaths.howFreeMediationWorksPage.uri) }}</p>
     {% else %}
       <p>{{ t('You need to ' + internalLink('complete a directions questionnaire form ',
           DashboardPaths.directionsQuestionnairePage.evaluateUri({ externalId: claim.externalId })) + 'to tell us more about the claim.') | safe }}</p>
       <p>{{ t('Your claim won’t proceed if you don’t complete and return the form before {{ deadline }}.',
           { deadline: claim.directionsQuestionnaireDeadline | date }) }}</p>
     {% endif %}
-
-    <p>{{ downloadResponseLink(claim) }}</p>
-
   </div>
 {% endmacro %}
