Fixed check and send page error if defendant is not an individual

--- a/src/main/features/claimant-response/views/check-and-send.njk
+++ b/src/main/features/claimant-response/views/check-and-send.njk
@@ -50,7 +50,7 @@
         bold = true
       ) }}
     {% endif %}
-    {% if directionsQuestionnaireDraft.exceptionalCircumstances.exceptionalCircumstances %}
+    {% if directionsQuestionnaireDraft.exceptionalCircumstances.exceptionalCircumstances.option === 'no' %}
       {{ row(
         label = 'Briefly explain your reasons',
         value = directionsQuestionnaireDraft.exceptionalCircumstances.reason,
