--- a/src/main/features/response/views/check-and-send.njk
+++ b/src/main/features/response/views/check-and-send.njk
@@ -405,7 +405,7 @@
           bottomBorder = false,
           bold = true
         ) }}
-      {% else %}
+      {% elseif directionsQuestionnaireDraft.hearingLocation.alternativeCourtName %}
         {{ row(
           label = 'Preferred hearing centre',
           value = directionsQuestionnaireDraft.hearingLocation.alternativeCourtName,
@@ -414,7 +414,7 @@
           bold = true
         ) }}
       {% endif %}
-      {% if directionsQuestionnaireDraft.exceptionalCircumstances.exceptionalCircumstances %}
+      {% if directionsQuestionnaireDraft.exceptionalCircumstances.exceptionalCircumstances.option === 'yes' %}
         {{ row(
           label = 'Briefly explain your reasons',
           value = directionsQuestionnaireDraft.exceptionalCircumstances.reason,
