Add logic to show mediation information

--- a/src/main/features/response/views/confirmation/part-admission-steps.njk
+++ b/src/main/features/response/views/confirmation/part-admission-steps.njk
@@ -52,8 +52,12 @@
   <p>{{ t('The claim will be settled.') }}</p>
 
   <h3 class="heading-small">{{ t('If {{ claimantName }} rejects your offer', { claimantName: claimantName } ) }}</h3>
-
-  <p>{{ t('The court will review the case for the full amount of {{fullAmount}}.', { fullAmount: fullAmount }) }}</p>
+  {% if claim.response.freeMediation === FreeMediationOption.YES %}
+    <p>{{ t('We’ll ask if they want to try mediation. If they agree, we’ll contact you with an appointment.') }}</p>
+    <p>{{ t('If they don’t want to try mediation the court will review the case for the full amount of {{ amount }}', { amount: claim.totalAmountTillToday | numeral }) }}</p>
+  {% else %}
+    <p>{{ t('The court will review the case for the full amount of {{fullAmount}}.', { fullAmount: fullAmount }) }}</p>
+  {% endif %}
 
 {% endif %}
 
@@ -91,14 +95,13 @@
   <h3 class="bold">{{ t('If {{ claimantName }} accepts your response', { claimantName: claimantName }) }}</h3>
   <p>The claim will be settled.</p>
   <h3 class="bold">{{ t('If {{ claimantName }} rejects your response', { claimantName: claimantName }) }}</h3>
-  {%  if claim.response.freeMediation === FreeMediationOption.YES %}
+  {% if claim.response.freeMediation === FreeMediationOption.YES %}
     <p>{{ t('We’ll ask if they want to try mediation. If they agree, we’ll contact you with an appointment.') }}</p>
     <p>{{ t('If they don’t want to try mediation the court will review the case. You might have to go to a hearing.') }}</p>
     <p>{{ t('We’ll contact you to tell you what to do next.') }}</p>
   {% else %}
     <p>{{ t('The court will review the case. You might have to go to a hearing.') }}</p>
     <p>{{ t('We’ll contact you to tell you what to do next.') }}</p>
-    <p></p>
   {% endif %}
 {% endif %}
 
