--- a/src/main/features/dashboard/views/macro/claimStatus/claimRejected.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimRejected.njk
@@ -150,8 +150,10 @@
     <p>{{ t('{{ defendantName }} has rejected the claim. They’ve suggested mediation to help resolve this dispute.',
         { defendantName: claim.claimData.defendant.name }) }}</p>
     <p>{{ t(externalLink('Find out how mediation works', 'https://formfinder.hmctsformfinder.justice.gov.uk/ex730-eng.pdf') + ' (PDF, 399KB)') | safe }}</p>
+    {% if mediationDeadline %}
     <p>{{ t('You need to email {{ emailAddress }} before before 4pm on {{ respondToMediationDeadline }} to tell us if you agree to mediation or not.',
         { emailAddress: supportEmailAddress, respondToMediationDeadline: mediationDeadline | date }) }}</p>
+    {% endif %}
     <p>{{ t('If you don’t send an email before the deadline, the claim will proceed without mediation.') }}</p>
     <p>{{ _downloadResponseLink(claim, 'Download their response') }}</p>
   </div>
