Update to use the correct party for displaying

--- a/src/main/features/dashboard/views/contact-them.njk
+++ b/src/main/features/dashboard/views/contact-them.njk
@@ -96,7 +96,7 @@
 
     {% if claim %}
       <div class="column-one-third">
-        {{ aboutClaimWidget(party, claim) }}
+        {{ aboutClaimWidget(otherParty, claim) }}
       </div>
     {% endif %}
   </div>
