--- a/src/main/common/components/free-mediation/freeMediationCheckAndSendBlock.njk
+++ b/src/main/common/components/free-mediation/freeMediationCheckAndSendBlock.njk
@@ -26,7 +26,7 @@
     ) }}
   {% endif %}
   {% if mediationDraft.canWeUseCompany %}
-    {% if mediationDraft.mediationPhoneNumberConfirmation %}
+    {% if mediationDraft.canWeUseCompany.mediationPhoneNumberConfirmation %}
       {{ row(
         label = 'Contact number',
         value = t(mediationDraft.canWeUseCompany.mediationPhoneNumberConfirmation) | capitalize,
