--- a/src/main/features/response/views/confirmation/full-defence-steps.njk
+++ b/src/main/features/response/views/confirmation/full-defence-steps.njk
@@ -4,10 +4,10 @@
 
 {% if claim.response.defenceType === DefenceType.ALREADY_PAID %}
   {% if claim.response.freeMediation === FreeMediationOption.YES %}
-    <p>{{ t('We’ll contact you when {{ claimant }} responds, to tell you what to do next.', { claimant: claim.claimData.claimant.name }) }}</p>
-    <p>{{ t('If {{ claimant }} accepts your response the claim will be settled.', { claimant: claim.claimData.claimant.name }) }}</p>
+    <p>{{ t('If {{ claimant }} accepts your response the claim will be settled. We’ll contact you when they respond.', { claimant: claim.claimData.claimant.name }) }}</p>
     <p>{{ t('If {{ claimant }} rejects your response we’ll ask them to try mediation. If they agree, we’ll contact you to arrange an appointment.', { claimant: claim.claimData.claimant.name }) }}</p>
     <p>{{ t('If they reject mediation the court will review the case. You might have to go to a hearing.') }}</p>
+    <p>{{ t('We’ll contact you to tell you what to do next.') }}</p>
   {% else %}
     <p>{{ t('If {{ claimant }} accepts your response the claim will be settled. We’ll contact you when they respond.',
         { claimant: claim.claimData.claimant.name }) }}</p>
