Update content to make prototype

--- a/src/main/features/response/views/confirmation/part-admission-steps.njk
+++ b/src/main/features/response/views/confirmation/part-admission-steps.njk
@@ -69,7 +69,7 @@
       {{ internalLink('contact ' + claimantName, claimantDetailsPageURI) }}
       {{ t('if you need their payment details.') }}
     </li>
-    <li>{{ t('make sure you get a receipt for any payments') }}</li>
+    <li>{{ t('make sure you get a receipt for each payment') }}</li>
   </ul>
 
   <p>{{ t('Because you’ve said you won’t pay immediately, {{ claimantName }} can either:', { claimantName: claimantName }) }}</p>
