--- a/src/main/features/response/views/confirmation/part-admission-steps.njk
+++ b/src/main/features/response/views/confirmation/part-admission-steps.njk
@@ -20,9 +20,9 @@
   <p>{{t('Because you’ve said you won’t pay immediately, {{ claimantName }} can either:', { claimantName:claimantName }) }}</p>
   <ul class="list list-bullet">
     <li>{{ t('ask you to sign a settlement agreement to formalise the repayment plan') }}</li>
-    <li>{{ t('request a County Court Judgment against you for the amount that you have admitted') }}</li>
+    <li>{{ t('request a County Court Judgment against you for {{ amount }}', { amount: amount | numeral }) }}</li>
   </ul>
-  <h3 class="heading-small">{{ t('If {{ claimantName }} rejects that you only owe {{ amount }},', {claimantName:claimantName, amount: amount}) }}</h3>
+  <h3 class="heading-small">{{ t('If {{ claimantName }} rejects that you only owe {{ amount }},', { claimantName:claimantName, amount: amount | numeral }) }}</h3>
   {% if claim.response.freeMediation === FreeMediationOption.YES %}
     <p>{{ t('We’ll ask if they want to try mediation. If they agree, we’ll contact you with an appointment.') }}</p>
     <p>{{ t('If they don’t want to try mediation the court will review the case for the full amount of {{ amount }}', { amount: claim.totalAmountTillToday | numeral }) }}</p>
@@ -53,7 +53,7 @@
     <p>{{ t('We’ll ask if they want to try mediation. If they agree, we’ll contact you with an appointment.') }}</p>
     <p>{{ t('If they don’t want to try mediation the court will review the case for the full amount of {{ amount }}', { amount: claim.totalAmountTillToday | numeral }) }}</p>
   {% else %}
-    <p>{{ t('The court will review the case for the full amount of {{ fullAmount }}.', { fullAmount: fullAmount }) }}</p>
+    <p>{{ t('The court will review the case for the full amount of {{ fullAmount }}.', { fullAmount: fullAmount | numeral }) }}</p>
   {% endif %}
 {% elif claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
   <h3 class="bold">{{ t('If {{ claimantName }} accepts your offer', { claimantName: claimantName }) }}</h3>
@@ -72,15 +72,15 @@
 
   <ul class="list list-bullet">
     <li>{{ t('ask you to sign a settlement agreement to formalise the repayment plan') }}</li>
-    <li>{{ t('request a County Court Judgment against you for the amount that you have admitted') }}</li>
+    <li>{{ t('request a County Court Judgment against you for {{ amount }}', { amount: amount | numeral }) }}</li>
   </ul>
 
-  <h3 class="bold">{{ t('If {{ claimantName }} rejects that you only owe {{ amount }}', { claimantName: claimantName, amount: amount }) }}</h3>
+  <h3 class="bold">{{ t('If {{ claimantName }} rejects that you only owe {{ amount }}', { claimantName: claimantName, amount: amount | numeral }) }}</h3>
   {% if claim.response.freeMediation === FreeMediationOption.YES %}
     <p>{{ t('We’ll ask if they want to try mediation. If they agree, we’ll contact you with an appointment.') }}</p>
-    <p>{{ t('If they don’t want to try mediation the court will review the case for the full amount of {{ amount }}', { amount: fullAmount }) }}</p>
+    <p>{{ t('If they don’t want to try mediation the court will review the case for the full amount of {{ amount }}', { amount: fullAmount | numeral }) }}</p>
   {% else %}
-    <p>{{ t('The court will review the case for the full amount of {{ fullAmount }}.', { fullAmount: fullAmount }) }}</p>
+    <p>{{ t('The court will review the case for the full amount of {{ fullAmount }}.', { fullAmount: fullAmount | numeral }) }}</p>
   {% endif %}
 
   <h3 class="bold">{{ t('If {{ claimantName }} rejects your offer to pay in instalments', { claimantName: claimantName }) }}</h3>
