--- a/src/main/features/claim/views/new-features-consent.njk
+++ b/src/main/features/claim/views/new-features-consent.njk
@@ -6,8 +6,9 @@
 {% block content %}
 <div class="grid-row">
   <div class="column-two-thirds">
-    <p>{{ t('We’re continuously improving this service to reduce the need for paper forms.') }}</p>
-    <p>{{ t('You can choose to try new online features as we launch them. We’ll tell you when new features apply to your claim.') }}</p>
+    <p>{{ t('We‘re continuously improving this service and trialling new features to reduce the need for paper forms.') }}</p>
+    <p>{{ t('You can volunteer to try new features. We won‘t select all volunteers.') }}</p>
+    <p>{{ t('We‘ll tell you if you‘re selected. You‘ll be able to try new features we‘ve already launched. We may also select your claim to trial new features we launch in future.') }}</p>
     <form method="POST" novalidate class="analytics-submit-event-trigger" data-event-label-from="consentResponse" data-event-action="New features consent">
       {{ csrfProtection(csrf) }}
 
@@ -20,13 +21,13 @@
           options = [
             {
               bold: false,
-              label: 'I’ll try new online features',
+              label: 'I’ll volunteer to try new features',
               value: YesNoOption.YES.option,
               checked: (form.valueFor('consentResponse') === YesNoOption.YES)
             },
             {
               bold: false,
-              label: 'I’ll use older paper forms',
+              label: 'I don’t want to volunteer to try new features',
               value: YesNoOption.NO.option,
               checked: (form.valueFor('consentResponse').value === YesNoOption.NO)
             }
