--- a/src/main/features/claimant-response/views/court-offered-set-date.njk
+++ b/src/main/features/claimant-response/views/court-offered-set-date.njk
@@ -10,7 +10,7 @@
   <div class="grid-row">
     <div class="column-two-thirds">
       <p>{{ t('Based on financial details the defendant gave us, we don’t believe they can pay by your proposed date.') }}</p>
-      <p>{{ t('The court’s calculator has determined {{ paymentDate }} as the date when they can pay you in full.', { paymentDate: paymentDate | date }) }}</p>
+      <p>{{ t('The court’s calculator has determined {{ paymentDate }} as the date when they can pay you in full.', { paymentDate: date }) }}</p>
 
       <form novalidate method="post">
         {{ csrfProtection(csrf) }}
