code review fixes

--- a/src/main/common/components/ccj/paid-amount-summary.njk
+++ b/src/main/common/components/ccj/paid-amount-summary.njk
@@ -14,7 +14,7 @@
       <p>{{ t('Judgment will be entered against the defendant for this amount.') }}</p>
 
       <table class="table-form">
-`        <caption class="visuallyhidden">{{ t('Amount payable by the defendant') }}</caption>
+        <caption class="visuallyhidden">{{ t('Amount payable by the defendant') }}</caption>
         <thead>
         <tr>
           <th scope="col"></th>
