--- a/src/main/features/claim/views/new-features-consent.njk
+++ b/src/main/features/claim/views/new-features-consent.njk
@@ -1,14 +1,16 @@
 {% extends "layout.njk" %}
 {% from "form.njk" import csrfProtection, radioGroup, submitButton %}
 
-{% set heading = 'Try new features' %}
+{% set heading = 'Volunteer to try new features' %}
 
 {% block content %}
 <div class="grid-row">
   <div class="column-two-thirds">
     <p>{{ t('We‘re continuously improving this service and trialling new features to reduce the need for paper forms.') }}</p>
-    <p>{{ t('You can volunteer to try new features. We won‘t select all volunteers.') }}</p>
-    <p>{{ t('We‘ll tell you if you‘re selected. You‘ll be able to try new features we‘ve already launched. We may also select your claim to trial new features we launch in future.') }}</p>
+    <h3 class="heading-small form-group-related">{{ t('If you volunteer') }}</h3>
+    <p>{{ t('We‘ll tell you if we select your claim - we won‘t select all claims.') }}</p>
+    <h3 class="heading-small form-group-related">{{ t('If your claim is selected') }}</h3>
+    <p>{{ t('You‘ll be able to try new features we‘ve already launched. We may also select your claim to trial new features we launch in future.') }}</p>
     <form method="POST" novalidate class="analytics-submit-event-trigger" data-event-label-from="consentResponse" data-event-action="New features consent">
       {{ csrfProtection(csrf) }}
 
